--- a/templates/banzheng.html
+++ b/templates/banzheng.html
@@ -17,14 +17,13 @@
   <hr>
 
 <p>使用模版,按照下面的改</p>
-   <p>王冬梅@@@玉泉；12月9日；浙A99X81；人名1：身份证号1，人名2：省份证号2；_@_玉泉；12月9日；浙A99X81；人名1：身份证号1，人名2：省份证号2</p>
+   <p>王冬梅@@@校区；日期；车牌；人名1：身份证号1，人名2：身份证号2；_@_校区2；日期2；车牌2；人名1：身份证号2，人名2：省份证号2</p>
 <hr>
 <p>使用说明:</p>
-    <p>@@@前面是要办证的提交人,@@@后面是办证内容</p>
+<p>@@@前面是要办证的提交人,@@@后面是办证内容</p>
+<p>_@_用来完成一次办理多张不同通行证,只需办一张不要_@_ 及其后面的信息.如果没有车牌信息,则用空格代替</p>
+<p>；，：所有符号均是中文下面的</p>
 
-<p>用_@_分开不同车牌,校区,日期需求,只需办一张就不要_@_ 格式如下:王冬梅@@@玉泉；12月9日；浙A99X81；人名1：身份证号1，人名2：省份证号2</p>
-<p>每一张里面要有校区,日期,车牌,人的信息,如果没有车牌那就:王冬梅@@@玉泉；12月9日； ；人名1：身份证号1 这里车牌就是直接用个空格.中间用；分隔注意是中文下面的哦</p>
-<p>人的信息用，分隔,然后人的名字和省份证号用：,也是中文的</p>
    <br>
 
 </body>
