--- a/templates/chongxintianxie.html
+++ b/templates/chongxintianxie.html
@@ -6,10 +6,9 @@
 </head>
 <body>
 <center>
-    <h3>办证页面</h3>
+    <h3>填写格式不正确哈,可能原因: {{error}}</h3>
     <div>
         <form action="/banzhengProcess" method="post">
-
         办证信息: <input type="text" name="nm"><br>
             提交人: <input type="text" name="tijiaoren"><br>
         <input type="submit" name="submit" value="办证">
