--- a/templates/banzheng.html
+++ b/templates/banzheng.html
@@ -20,6 +20,7 @@
 
 <p>办证信息填写规则如下</p>
 <p>校区；日期；车牌；人名1：身份证号1，人名2：身份证号2；@@@校区2；日期2；车牌2；人名1：身份证号2，人名2：身份证号2</p>
+<p>提交人:自己的名字,中文/拼音/缩写都可以,作为数据备份</p>
 
 <hr>
 <p>使用说明:</p>
