--- a/templates/chongxintianxie.html
+++ b/templates/chongxintianxie.html
@@ -19,12 +19,11 @@
 
 <p>办证信息填写规则如下</p>
 <p>校区；日期；车牌；人名1：身份证号1，人名2：身份证号2；@@@校区2；日期2；车牌2；人名1：身份证号2，人名2：身份证号2</p>
-
+<p>提交人:自己的名字,中文/拼音/缩写都可以,作为数据备份</p>
 <hr>
 <p>使用说明:</p>
 <p>1 @@@用来完成一次办理多张不同通行证,只需办一张不要@@@及其后面的信息.如果没有车牌信息,则用空格代替</p>
-<p>2 提交人 帮忙办证的人</p>
-<p>3 ；，：所有符号均是中文下面的</p>
+<p>2 ；，：所有符号均是中文下面的</p>
 
    <br>
 
