--- a/templates/chongxintianxie.html
+++ b/templates/chongxintianxie.html
@@ -9,7 +9,7 @@
     <h3>填写格式不正确哈,可能原因: {{error}}</h3>
     <div>
         <form action="/banzhengProcess" method="post">
-        办证信息: <input type="text" name="nm"><br>
+        办证信息: <input type="text" name="nm" style="width:1000px"><br>
             提交人: <input type="text" name="tijiaoren"><br>
         <input type="submit" name="submit" value="办证">
         </form>
