--- a/templates/banzheng.html
+++ b/templates/banzheng.html
@@ -9,7 +9,7 @@
     <h3>办证页面</h3>
     <div>
         <form action="/banzhengProcess" method="post">
-        <form>办证信息: <input type="text" name="nm" style="width:1000px" ></form><br>
+        办证信息: <input type="text" name="nm" style="width:1000px" ><br>
             提交人: <input type="text" name="tijiaoren"><br>
         <input type="submit" name="submit" value="办证">
         </form>
